--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -461,12 +461,10 @@
     <div style="display: flex; align-items: baseline; {{#groupLabel}}justify-content: space-between;{{/groupLabel}} {{^groupLabel}}justify-content: flex-end;{{/groupLabel}}">
         {{#groupLabel}}
             <div class="input-field group-select-wrap">
-                <select id="group-select" {{^manyGroups}}disabled{{/manyGroups}}>
-                    {{#manyGroups}}
-                        <option value="">{{allLabel}}</option>
-                    {{/manyGroups}}
+                <select id="group-select">
+                    <option value="">{{allLabel}}</option>
                     {{#groups}}
-                        <option value="{{id}}">{{name}}</option>
+                        <option value="{{id}}" {{#hasOneGroup}}selected{{/hasOneGroup}}>{{name}}</option>
                     {{/groups}}
                 </select>
                 <label>{{groupLabel}}</label>
