EZ-1225 can now modify autoassess scripts on exercise page

--- a/wui/static/adhocpoc.html
+++ b/wui/static/adhocpoc.html
@@ -248,7 +248,7 @@
                     <button id="grade-button" class="waves-effect waves-light btn">Lisa hinnang</button>
                 </div>
 
-                <div class="editor-wrapper no-cursor">
+                <div class="editor-wrapper editor-read-only">
                     <form>
                         <textarea id="student-submission"></textarea>
                     </form>
