EZ-1294 download submission button respects selected group

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -577,7 +577,7 @@
                 <label>{{groupLabel}}</label>
             </div>
         {{/groupLabel}}
-        <button id="export-submissions-button" class="waves-effect waves-light btn">{{exportSubmissionsLabel}}</button>
+        <button id="export-submissions-button" class="waves-effect waves-light btn"><ez-btn-content>{{exportSubmissionsLabel}}</ez-btn-content></button>
     </div>
 </script>
 
