wui fix exercises list loading animation

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -426,6 +426,15 @@
     </div>
 </script>
 
+<script id="tm-loading-placeholders" type="text/x-handlebars-template">
+    <div class="collection loading-collection loading-courses" style="margin-top: {{marginTopRem}}rem;">
+        <div class="item title" style="width: {{titleWidthRem}}rem;"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+    </div>
+</script>
+
 <script id="tm-no-access-page" type="text/x-handlebars-template">
     <div class="title-wrap no-crumb">
         <h2 class="title">{{title}}</h2>
